@@ -487,6 +487,7 @@
 		<Product type="2005" id="0505" name="ZM1601 Battery Operated Siren"/>
 		<Product type="2006" id="0610" name="ZM1701 Electronic Deadbolt Door Lock without Handle"/>
 		<Product type="2006" id="0620" name="ZM1702 Electronic Deadbolt Door Lock with Handle"/>
+		<Product type="2006" id="0621" name="ZM1701 Electronic Deadbolt Door Lock without Handle"/>
 		<Product type="2008" id="0803" name="ZL7101 Plug-in Dimmer Module"/>
 		<Product type="200a" id="0a02" name="ZG8101 Garage Door Detector"/>
 		<Product type="200f" id="0f02" name="ZG6301 CO Detector"/>
